--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,21 +64,22 @@ services:
       db:
         condition: service_healthy
 
-  mongo:
-    image: mongo:6.0.4
-    container_name: innovation-mongo
-    restart: unless-stopped
-    command: mongod --oplogSize 128 --replSet rs0
-    volumes:
-      - mongo_data:/data/db
-    networks:
-      - innovation_net
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 10s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
+ mongo:
+  image: mongo:4.4
+  container_name: innovation-mongo
+  restart: unless-stopped
+  command: mongod
+  volumes:
+    - mongo_data:/data/db
+  networks:
+    - innovation_net
+  healthcheck:
+    test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+    interval: 10s
+    timeout: 10s
+    retries: 5
+    start_period: 40s
+
 
   discourse:
     image: bitnami/discourse:2.1.8
