--- a/.env
+++ b/.env
@@ -41,3 +41,15 @@ SMTP_FROM=noreply@redinnovacionfp.es
 # Backup Configuration
 BACKUP_RETENTION_DAYS=30
 BACKUP_PATH=/backups
+
+# Application Configuration
+VITE_API_URL=http://0.0.0.0:3000
+VITE_DOCS_URL=http://0.0.0.0:4000
+VITE_CHAT_URL=http://0.0.0.0:3000/chat
+VITE_FORUM_URL=http://0.0.0.0:3000/forum
+VITE_NEXTCLOUD_URL=http://0.0.0.0:3000/nextcloud
+VITE_MEET_URL=http://0.0.0.0:3000/meet
+
+# Development Configuration
+HOST=0.0.0.0
+PORT=3000
