--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_USER=innovation_user
 DB_PASSWORD=697457697457
 DB_NAME=innovation_network
 DB_CONNECTION_LIMIT=5
-DB_ROOT_PASSWORD:697457697457
+DB_ROOT_PASSWORD=697457697457
 
 # Application Configuration
 NODE_ENV=development
